# HappyTreeThreadsServer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  angry_threads_test.sh  docker-compose.yml  hls.sh  process_video.sh
include/: logger.h  parser.h  server.h  stats.h
src/: .http.c.kate-swp  http.c  logger.c  main.c  parser.c  server.c  stats.c
test/: angry_threads_hsl_test.c  angry_threads_test.c
test/streaming/: chrome_test.py  pyproject.toml  slow_read.py
www/: index.html  styles.css
